# ai-storywriter

./: .dockerignore  .env.default  .gitignore  0001-add-google-auth.patch  CHARACTER_AGENT_BUG_FIXES.md  CHARACTER_AGENT_FRONTEND_INTEGRATION.md  CHARACTER_AGENT_LANGGRAPH_FIXES.md  CLAUDE.md  Dockerfile  PHOTO_UPLOAD_IMPLEMENTATION.md  README.docker.md  README.md  ROLLING_STORIES.md  add_credits.sh  build-docker.sh  build-solution.sh  chatbot.py  clean-solution.sh  deploy-and-run.sh  deploy-docker.sh  dev-with-library.sh  docker-compose.yml  docker-entrypoint.sh  env.default  jest.config.js  package-lock.json  package.json  run-backend.sh  run-frontend.sh  run-playwright.sh  run.sh  start-backend.sh  start-frontend.sh  start-storybook.sh  start_backend.sh  start_frontend.sh  style-build.sh  test-dirty-state-fixes.sh  test_background_folders.py  test_fix.py  (+11 more)
backend/: .env.example  .gitignore  CLAUDE.md  README.md  add_credits.sh  ai_marketplace_processor.py  app.py  auth_controller.py  check_stories.py  clean_generated_story.py  db.py  dbschema.sql  debug_google_link.py  debug_requests.py  debug_testuser.py  get_admin_token.py  init_roles.py  llm_backend.md  llm_proxy_controller.py  llm_service.py  lmstudio_proxy_controller.py  lmstudio_service.py  migr.py  ollama_service.py  openai_service.py  pyproject.toml  pytest.ini  recreate_db.py  repositories.py  requirements.txt  reset_password.py  scenario_controller.py  settings_controller.py  test_chat_endpoints.py  test_fastapi.py  test_frontend_endpoint.py  test_image_folders.py  test_roles.py  test_streaming_agent.py
(+1252 files in other folders)
