[project]
name = "storywriter-backend"
version = "0.1.0"
description = "Agentic story writer backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.1.14",
    "langgraph>=1.1.8",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.44.0",
]
